--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo list</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Todo list</title>
 </head>
+
 <body>
-    <header>
-        <h1>Minha Lista de tarefas</h1>
-    </header>
+	<header>
+		<h1>Minha Lista de tarefas</h1>
+		<p id="funcionamento">Clique duas vezes em um item para marcá-lo como completo</p>
+	</header>
 </body>
+
 </html>
