--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 		<h1>Minha Lista de tarefas</h1>
 		<p id="funcionamento">Clique duas vezes em um item para marcá-lo como completo</p>
 		<input type="text" id="texto-tarefa">
+		<ol id="lista-tarefas">
+
+		</ol>
 	</header>
 </body>
 
