--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 
 <body>
 	<header>
-		<h1>Minha Lista de tarefas</h1>
-		<p id="funcionamento">Clique duas vezes em um item para marcá-lo como completo</p>
-		<input type="text" id="texto-tarefa">
-		<button id="criar-tarefa">Adicionar</button>
-		<ol id="lista-tarefas">
-
-		</ol>
+		<h1>Minha Lista de Tarefas</h1>
 	</header>
+	<p id="funcionamento">Clique duas vezes em um item para marcá-lo como completo</p>
+	<input type="text" id="texto-tarefa">
+	<button id="criar-tarefa">Adicionar</button>
+	<ol id="lista-tarefas">
+
+	</ol>
+
 	<script src="script.js"></script>
 </body>
 
