--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
 	<title>Todo list</title>
 </head>
 
@@ -16,7 +17,7 @@
 	<input type="text" id="texto-tarefa">
 	<button id="criar-tarefa">Adicionar</button>
 	<ol id="lista-tarefas">
-
+	
 	</ol>
 
 	<script src="script.js"></script>
