--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 	<ol id="lista-tarefas">
 	
 	</ol>
+	<button id="apaga-tudo">Apagar</button>
+	<button id="remover-finalizados">Remover Finalizados</button>
 
 	<script src="script.js"></script>
 </body>
