--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	</ol>
 	<button id="apaga-tudo">Apagar</button>
 	<button id="remover-finalizados">Remover Finalizados</button>
+	<button id="salvar-tarefas">Salvar</button>
 
 	<script src="script.js"></script>
 </body>
