--- a/index.html
+++ b/index.html
@@ -1,29 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Fabio Augusto Mazuchi</title>
+  </head>
 
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="style.css">
-	<title>Todo list</title>
-</head>
+  <body>
+    <header>
+      <h1>Minha Lista de Tarefas</h1>
+    </header>
+    <div class="container">
+      <p id="funcionamento">
+        Clique duas vezes em um item para marcá-lo como completo
+      </p>
+      <div class="input">
+        <input type="text" id="texto-tarefa" />
+        <button id="criar-tarefa">Adicionar</button>
+      </div>
 
-<body>
-	<header>
-		<h1>Minha Lista de Tarefas</h1>
-	</header>
-	<p id="funcionamento">Clique duas vezes em um item para marcá-lo como completo</p>
-	<input type="text" id="texto-tarefa">
-	<button id="criar-tarefa">Adicionar</button>
-	<ol id="lista-tarefas">
-	
-	</ol>
-	<button id="apaga-tudo">Apagar</button>
-	<button id="remover-finalizados">Remover Finalizados</button>
-	<button id="salvar-tarefas">Salvar</button>
-
-	<script src="script.js"></script>
-</body>
-
+      <div class="buttons">
+        <button class="vermelho" id="apaga-tudo">Apagar Lista</button>
+        <button class="amarelo" id="remover-finalizados">
+          Remover Finalizados
+        </button>
+        <button class="cinza" id="salvar-tarefas">Salvar</button>
+      </div>
+      <ol id="lista-tarefas"></ol>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
