--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       </div>
       <ol id="lista-tarefas"></ol>
     </div>
+    <p id="test" class="main"></p>
     <script src="script.js"></script>
   </body>
 </html>
