--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         <button class="amarelo" id="remover-finalizados">
           Remover Finalizados
         </button>
-        <button class="cinza" id="salvar-tarefas">Salvar</button>
+        <button id="salvar-tarefas">Salvar</button>
+        <button id="remover-selecionado" class="vermelho">Remover Selecionado</button>
       </div>
       <ol id="lista-tarefas"></ol>
     </div>
-    <p id="test" class="main"></p>
     <script src="script.js"></script>
   </body>
 </html>
