--- a/index.html
+++ b/index.html
@@ -4,32 +4,36 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gwendolyn:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <title>Fabio Augusto Mazuchi</title>
   </head>
 
   <body>
-    <header>
-      <h1>Minha Lista de Tarefas</h1>
-    </header>
     <div class="container">
-      <p id="funcionamento">
-        Clique duas vezes em um item para marcá-lo como completo
-      </p>
-      <div class="input">
-        <input type="text" id="texto-tarefa" />
+      <section class="todo">
+        <header>
+          <h1>Minha Lista de Tarefas</h1>
+        </header>
+        <p id="funcionamento">
+          Clique duas vezes em um item para marcá-lo como completo
+        </p>        
+        <input type="text" id="texto-tarefa" placeholder="O que deseja listar?" />
         <button id="criar-tarefa">Adicionar</button>
-      </div>
-
-      <div class="buttons">
-        <button class="vermelho" id="apaga-tudo">Apagar Lista</button>
-        <button class="amarelo" id="remover-finalizados">
+      </section>
+      <section class="buttons">
+        <button  id="apaga-tudo">Apagar Lista</button>
+        <button id="remover-finalizados">
           Remover Finalizados
         </button>
         <button id="salvar-tarefas">Salvar</button>
-        <button id="remover-selecionado" class="vermelho">Remover Selecionado</button>
-      </div>
-      <ol id="lista-tarefas"></ol>
+        <button id="remover-selecionado">Remover Selecionado</button>
+      </sections>
+      <ol id="lista-tarefas">
+      
+      </ol>
     </div>
     <script src="script.js"></script>
   </body>
