--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gwendolyn:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
-    <title>Fabio Augusto Mazuchi</title>
+    <title>Todo List</title>
   </head>
 
   <body>
@@ -16,20 +16,22 @@
       <section class="todo">
         <header>
           <h1>Minha Lista de Tarefas</h1>
-        </header>
+        </header>        
+        <input type="text" id="texto-tarefa" placeholder="Digite sua tarefa aqui..." />
+        <button id="criar-tarefa" class="roxo">Adicionar</button>
         <p id="funcionamento">
           Clique duas vezes em um item para marcá-lo como completo
-        </p>        
-        <input type="text" id="texto-tarefa" placeholder="O que deseja listar?" />
-        <button id="criar-tarefa">Adicionar</button>
+        </p>
       </section>
       <section class="buttons">
-        <button  id="apaga-tudo">Apagar Lista</button>
-        <button id="remover-finalizados">
-          Remover Finalizados
-        </button>
-        <button id="salvar-tarefas">Salvar</button>
-        <button id="remover-selecionado">Remover Selecionado</button>
+        <div>
+          <button  id="apaga-tudo">Apagar Lista</button>
+          <button id="remover-finalizados">
+            Remover Finalizados
+          </button>
+          <button id="salvar-tarefas">Salvar</button>
+          <button id="remover-selecionado">Remover Selecionado</button>
+        </div>
       </sections>
       <ol id="lista-tarefas">
       
